crosshair/examples/hypothesis/bugs_detected/simple_strategies.out
simple_strategies.py:9: error: AssertionError:  when calling positive(s = -1)
